force-app/main/default/objects/Bicycle__c/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <label>Model Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>