force-app/main/default/objects/Bicycle__c/fields/Planned__c.field-meta.xml
<CustomField>
    <fullName>Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planned</label>
    <type>Checkbox</type>
</CustomField>