force-app/main/default/objects/Bicycle__c/fields/Specialized__c.field-meta.xml
<CustomField>
    <fullName>Specialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specialized</label>
    <type>Checkbox</type>
</CustomField>